Fix avatar background stretch

--- a/app/assets/stylesheets/components/user_profile.scss
+++ b/app/assets/stylesheets/components/user_profile.scss
@@ -52,7 +52,7 @@
 }
 
 .avatar {
-  height: 100px;
+  height: 100%;
   width: 100px;
   position: relative;
   margin: 0 auto;
@@ -71,6 +71,8 @@
   background-size: cover;
   img {
     height: 100%;
-    width: 100%;
+    width: auto;
+    position: relative;
+    right: 50px;
   }
 }
